kuber/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular-app
        image: 1992andy/ws37frontend
        ports:
        - containerPort: 80
      #   volumeMounts:
      #   - name: angular-volume
      #     mountPath: /usr/share/nginx/html
      # volumes:
      #   - name: angular-volume
      #     configMap:
      #       name: angular-config
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  # type: ClusterIP  # Change from LoadBalancer to ClusterIP
  type: LoadBalancer
