kuber/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: frontend-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/ingress.class: "nginx"  # Ensure that the ingress is handled by NGINX
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: localhost  # You can change this to a specific domain if needed
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: angular-service  # This matches your service name
#                 port:
#                   number: 80
#      - host: "209.38.57.27"
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: angular-service
#                 port:
#                   number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
    - host: "209.38.57.27"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
